# frozen-forest

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  lint.yml
assets/: forest-ground.aseprite  tree.aseprite
frozen-forest-macro/: Cargo.toml
frozen-forest-macro/src/: lib.rs
src/: camera.rs  damage.rs  entity.rs  entityData.rs  health.rs  main.rs  mob.rs  player.rs  ui.rs  world.rs
src/entities/: data.rs  entity.rs  event.rs  longtimeAttack.rs  longtime_attack.rs  mob.rs  mod.rs  player.rs  spells.rs
src/entities/player/: attacks.rs  fireball.rs  melee.rs  mod.rs  spells.rs
